# ModernC-

./: README.md
Code_Repo/L0/: hello.cpp  prepare.md
Code_Repo/L1_Build_and_Tools/: CMakeLists.txt  README.md  main.cpp  tools.cpp  tools.hpp
Homework_Solution/HW1/: solution.md
Homework_Solution/HW1/homework_1/task_1/: command.sh
Homework_Solution/HW1/homework_1/task_2/: CMakeLists.txt  build.sh
Homework_Solution/HW1/homework_1/task_2/src/: subtract.cpp  sum.cpp
Homework_Solution/HW2/: guess_game  guess_game.cpp
